Fix image-text container overlapping issue and reorder image and text container

--- a/styles.css
+++ b/styles.css
@@ -89,12 +89,15 @@ h2 {
 .image-text-container {
     margin: 10px 20px;
     width: 40%;
-    max-height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .image-container {
     border: 1px solid black;
     height: 100%;
+    max-height: 500px;
     width: 100%;
 }
 
@@ -107,7 +110,6 @@ h2 {
 .text-container {
     border: 1px solid black;
     min-height: 90px;
-    max-width: 100%;
     margin-top: 5px;
     padding: 5px 10px;
 }
@@ -117,5 +119,5 @@ h2 {
 }
 
 .text-container > p {
-    text-align: justify;
+    text-align: center;
 }
